--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.application.name=pms
 
-# Database configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/PMS?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=Venky
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+# SQL Server Configuration with SSL Disabled
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=PMS;integratedSecurity=true;encrypt=false
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+
 
 # JWT configuration
 jwt.secret=YjFjYzRjOTAtYjI4NC00ZGEyLTgxNDAtY2VkYTNiODZlZmU1
