--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,14 @@ spring.jpa.show-sql=true
 
 # JWT configuration
 jwt.secret=YjFjYzRjOTAtYjI4NC00ZGEyLTgxNDAtY2VkYTNiODZlZmU1
+
+logging.level.org.springframework.web.servlet.DispatcherType=DEBUG
+
+# application.properties
+spring.web.cors.allow-credentials=true
+spring.web.cors.allowed-origins=http://localhost:5173
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.web.cors.allowed-headers=*
+spring.web.cors.exposed-headers=*
+
+spring.main.allow-bean-definition-overriding=true
